Fixed scrolling bug in the navbar and placed the logo correctly on smaller devices

--- a/src/sass/modules/_nav.scss
+++ b/src/sass/modules/_nav.scss
@@ -211,7 +211,7 @@ $nav-width: 310px;
         overflow-y: scroll;
 
         .buttons-container {
-            height: auto;
+            min-height: 100vh;
             padding: 0;
 
             ul {
