--- a/src/sass/modules/_sections.scss
+++ b/src/sass/modules/_sections.scss
@@ -85,7 +85,7 @@
     @include media($screen-sm) {
       .ench-logo {
         position: absolute;
-        top: 0px;
+        top: 0px !important;
       }
     }
   }
